# legatio

./: .env  .gitignore  Cargo.toml  LICENSE.txt  README.md  config.toml  legatio.db-shm  legatio.db-wal  themes.toml
.github/workflows/: coverage.yml  pull_request.yml  testing.yml  tests.yml
doc/: README.html
docs/: db.md
migrations/: 001_create_tables.sql
src/: lib.rs  main.rs
src/core/: canvas.rs  mod.rs  project.rs  prompt.rs  scroll.rs
src/db/: app_state.rs  file.rs  mod.rs  project.rs  prompt.rs  scroll.rs
src/services/: config.rs  display.rs  flow.rs  legatio.rs  mod.rs  model.rs  search.rs  ui.rs
src/tests/: mod.rs  test_prompt_ui.rs
src/ui/: app.rs  drawer.rs  master.rs  mod.rs  prompt_box.rs
src/utils/: db_utils.rs  error.rs  file_utils.rs  logger.rs  mod.rs  prompt_utils.rs  structs.rs
tests/: core_canvas.rs  core_project.rs  core_prompts.rs  core_scroll.rs  services_legatio.rs  services_ui.rs  utils_logger.rs
tests/core/: project_tests.rs  prompts_tests.rs  scroll_tests.rs
