[package]
name = "legatio"
version = "0.1.4"
edition = "2021"

[lib]
name = "legatio"
path = "src/lib.rs"

[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = false

[dependencies]

# Async runtime
tokio = { version = "1.20.0", features = ["macros"]} # "full"

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite"]} # "macros"

# HTTP client
reqwest = { version = "^0.12.9", default-features = false, features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

# Config
dirs-next = "2.0.0"

# Error handling
anyhow = "1.0"
tempfile = "3.15.0"
# Search
ignore = "0.4.23"
nucleo-picker = "0.8.0"

# uuid
uuid = { version = "1.11.0", features = ["v4"] }

# Models
openai-api-rs = "5.2.4"
anthropic-rs = "0.1.7"
ollama-rs = "0.2.0"

# Ui
ratatui = "0.29.0"
crossterm = "0.28.1"

